# PhantomMic

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/tn/amin/phantom_mic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  logging.h  main.cpp  native_api.h
app/src/main/cpp/InlineHook/: Ihook.h  InlineHook.cpp  InlineHook.hpp  fixPCOpcode.c  ihookstub.s
app/src/main/cpp/phantom/: PhantomBridge.cpp  PhantomBridge.h  hook_compat.h  utils.h
app/src/main/java/tn/amin/phantom_mic/: FileManager.java  MainHook.java  PhantomManager.java  SPManager.java
app/src/main/java/tn/amin/phantom_mic/audio/: AudioMaster.java  ExposedByteArrayOutputStream.java  InputStreamDataSource.java
app/src/main/java/tn/amin/phantom_mic/hook/: ActivityResultHook.java  ActivityResultWrapper.java
app/src/main/java/tn/amin/phantom_mic/log/: Logger.java
app/src/main/res/mipmap-anydpi-v26/: phantom_icon_round.xml
app/src/main/res/values/: phantom_icon_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/tn/amin/phantom_mic/: ExampleUnitTest.kt
